tests/paczka1/fuzzy1/13895504.err
Error in line 1: s
Error in line 2: Zit88QxvOAh A615 47,0
Error in line 4: S223 S223 77,9
Error in line 10: kV9 A615 38,7
Error in line 27: L30CyY A615 56,0
Error in line 24: Zit88QxvOAh A615 472,2
Error in line 26: kV9 S223 23,4
Error in line 30: zG2nfKHpG A615 9,7
